fixed fonts for iphone, fixed header spacing, reduced width on buttons, reduced share buttons container size, fixed share icons in footer, fixed button presentation, added kickstarter button to top and increased contrast on ks buttons, added kickstarter link to nav, added ng show to kickstarter elements.

--- a/app/styles/components/_pages/_page-home.scss
+++ b/app/styles/components/_pages/_page-home.scss
@@ -27,12 +27,26 @@ img.sit {
 
 // This needs to go wherever site level tweaks are going.
 
-.button--primary {
-  width: 100%;
+.template-content {
+  padding-top: 1rem;
 }
 
+.button--primary {
+  width: 100%;
+  border-radius: .25rem;
+  background-color: rgba($brand_color-dkblue, .5);
+  border: .15rem rgba(white, .5) solid;
+  font-size: 1.5rem;
+  padding: 12px;
+  transition: background-color 0.5s ease;
 
+}
 
+.button--primary:hover {
+  border: .15rem rgba(white, .5) solid;
+  border-radius: .25rem;
+  background-color: rgba($brand_color-dkblue, .9);
+}
 
 // Hero Styles
 
@@ -47,6 +61,9 @@ img.sit {
   font-weight: bold;
   text-align: center;
   padding-bottom: 10rem;
+  img {
+    padding-top: 2rem;
+  }
   h1 {
     text-align: center;
 	background-color: rgba($brand-color-dkblue, 0.75);
@@ -79,10 +96,6 @@ img.sit {
   background-color: $brand_color-ltblue;
 }
 
-
-
-
-
 // Info Section
 
 .info-section {
@@ -96,6 +109,14 @@ img.sit {
     padding: 0 0 3rem;
 	margin: 0 auto;
 	max-width: 400px;
+  }
+}
+
+// First Info Section
+
+.firstInfo {
+  h2 {
+    margin-bottom: 0;
   }
 }
 
@@ -212,6 +233,7 @@ img.sit {
     left: -50px;
     text-align: center;
     background: linear-gradient(to right, #0D2734 , #163B48);
+    transition: background 0.5s;
     span {
       left: -30px;
       top: -30px;
@@ -315,7 +337,7 @@ footer {
 
   // Button Tweak
   .button--primary {
-    max-width: 500px;
+    max-width: 275px;
   }
 
   // Padding Tweak
