--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -205,9 +205,6 @@ main {
   background: $brand_color-dkblue;
 }
 
-.template-content {
-  padding-top: 60px;
-}
 
 /** Larger Screens - desktops and tablets **/
 @media all and (min-width: 990px) {
